# Guinness-Bot

./: .gitattributes  README.md
Bot/: build.gradle.kts  settings.gradle.kts
Bot/guinness-core/: build.gradle.kts
Bot/scripts/: generate-native-headers.bat
Bot/src/main/kotlin/: Main.kt
dofus/src/ank/battlefield/: Battlefield.as  GlobalSpriteHandler.as  GridHandler.as  InteractionHandler.as  MapHandler.as  PointerHandler.as  SelectionHandler.as  TextHandler.as
dofus/src/ank/utils/: Countries.as  Crypt.as  ExtendedArray.as  ExtendedObject.as  ExtendedString.as  Logger.as  MouseEvents.as  QueueEmbedMovieClip.as  SWFLoader.as  Sequencer.as  XMLLoader.as
dofus/src/dofus/: DofusCore.as  SaveTheWorld.as  TempSafes.as  TempSafesBis.as
dofus/src/dofus/aks/: Conquest.as  Enemies.as  Fights.as  Friends.as  Guild.as  Handler.as  Infos.as  Items.as  Party.as  Storages.as  Subareas.as  Waypoints.as
dofus/src/dofus/datacenter/: Accessory.as  Alignment.as  CloseCombat.as  Conquest.as  ConquestBonusData.as  ConquestVillageData.as  ConquestZoneData.as  Craft.as  Crafter.as  Creature.as  Exchange.as  Feat.as  Game.as  GuildInfos.as  GuildRights.as  House.as  Job.as  LaunchedSpell.as  Monster.as  Mount.as  MountableCreature.as  NonPlayableCharacter.as  OfflineCharacter.as  ParkMount.as  PrismPoint.as  Quest.as  QuestObjective.as  QuestStep.as  Question.as  Server.as  ServerInformations.as  ServerProblem.as  Shop.as  Spell.as  Storage.as  Subway.as  TaxCollector.as  TaxCollectorStorage.as  Team.as  TutorialIf.as  (+2 more)
dofus/src/dofus/managers/: CharactersManager.as  ChatManager.as  GameActionsManager.as  InteractionsManager.as  KeyManager.as  NightManager.as  OptionsManager.as  ServersManager.as  SpeakingItemsManager.as  StreamingDisplayManager.as  UIdManager.as
dofus/src/dofus/sounds/: AudioElement.as  AudioManager.as
dofus/src/dofus/utils/: Api.as  DofusConfiguration.as
dofus/src/mx/events/: EventDispatcher.as
dofus/src/org/utils/: SimpleDateFormatter.as
guinness-bot/: build.gradle.kts  settings.gradle.kts
guinness-bot/gradle/wrapper/: gradle-wrapper.properties
guinness-bot/guinness-api/: build.gradle.kts
guinness-bot/jni/: generate-native-headers.bat
guinness-bot/jni/headers/: com_guiness_bot_core_NativeAPI.h  com_guiness_bot_external_NativeAPI.h
guinness-bot/scripts/: ScriptTest.kts  script_test.kts
guinness-dll/install/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  winsock-patcher.sln  winsock-patcher.vcxproj  winsock-patcher.vcxproj.filters
guinness-dll/install/Release/: .proxy-port
guinness-dll/src/: Hook.h  Interceptor.h  Library.cpp  Library.h  ModuleHideHelpers.cpp  ModuleHideHelpers.h
guinness-native/: CMakeLists.txt  conanfile.txt
guinness-native/include/: com_guiness_bot_core_NativeAPI.h
guinness-native/install/: install_32bits.bat  install_64bits.bat
guinness-native/src/: keysend.cpp  keysend.h  library.cpp
guinness-native/src/AsmJit/AsmJit/: AssemblerX86X64.cpp  AssemblerX86X64.h  CompilerX86X64.h  Defs.cpp  Defs.h  OperandX86X64.cpp  OperandX86X64.h
guinness-native/src/BeatEngine/Includes/: Routines_Disasm.c
guinness-native/src/HadesMemory/: MemoryMgr.cpp  Patcher.cpp  Region.cpp
guinness-native/src/HadesMemory/PeLib/: DosHeader.cpp  ImportDir.cpp  NtHeaders.cpp  Section.cpp  TlsDir.cpp
injector/: CMakeLists.txt
injector/include/: com_guiness_bot_external_NativeAPI.h
injector/install/: install_32bits.bat  install_64bits.bat
injector/src/: Injector.cpp  Injector.h  library.cpp  main.cpp
injector/src/AsmJit/AsmJit/: AsmJit.h  Build.h  Compiler.cpp  CompilerX86X64.cpp  DefsX86X64.cpp  DefsX86X64.h  Operand.h
injector/src/BeatEngine/Includes/: Routines_ModRM.c
injector/src/HadesMemory/: FindPattern.cpp  Injector.cpp  Module.cpp
injector/src/HadesMemory/Detail/: Process.cpp
injector/src/HadesMemory/Experimental/: ManualMap.cpp
injector/src/HadesMemory/PeLib/: ExportDir.cpp  PeFile.cpp
injector/src/HadesMemory/include/HadesMemory/: Injector.hpp  MemoryMgr.hpp
injector/src/HadesMemory/include/HadesMemory/Detail/: Error.hpp  StringBuffer.hpp  TypeTraits.hpp
injector/src/HadesMemory/include/HadesMemory/PeLib/: DosHeader.hpp  ExportDir.hpp  PeLib.hpp  Section.hpp  TlsDir.hpp
packet-interceptor/: CMakeLists.txt
packet-interceptor/install/: install_64bits.bat
packet-interceptor/lib/minhook/: MinHook.h
packet-interceptor/src/: Hook.h  Interceptor.h  library.cpp  library.h
scripts/__Packages/ank/battlefield/: Constants.as  LoadManager.as  OverHeadHandler.as  PointsHandler.as  SpriteHandler.as  VisualEffectHandler.as  ZoneHandler.as
scripts/__Packages/ank/gapi/: Gapi.as
scripts/__Packages/ank/utils/: Compressor.as  ConsoleUtils.as  CustomDate.as  CyclicTimer.as  Extensions.as  Md5.as  PatternDecoder.as  SharedObjectFix.as  Timer.as
scripts/__Packages/dofus/: Constants.as  DofusLoader.as  Kernel.as
scripts/__Packages/dofus/aks/: Account.as  Aks.as  Basics.as  Chat.as  DataProcessor.as  Dialog.as  Documents.as  Emotes.as  Exchange.as  Game.as  GameActions.as  Houses.as  Job.as  Key.as  Mount.as  Quests.as  Specialization.as  Spells.as  Subway.as  Tutorial.as
scripts/__Packages/dofus/datacenter/: Basics.as  BigStore.as  Challenge.as  Character.as  ConquestWorldData.as  Datacenter.as  Document.as  DofusMap.as  Effect.as  FeatEffect.as  FightChallengeData.as  FightInfos.as  Hint.as  Item.as  ItemSet.as  JobOptions.as  LocalPlayer.as  MonsterGroup.as  MountPark.as  Mutant.as  Order.as  PlayableCharacter.as  PrismSprite.as  QuestBook.as  Rank.as  SecureCraftExchange.as  ServerProblemEvent.as  Skill.as  Specialization.as  Subarea.as  Title.as  Tutorial.as  TutorialAction.as  TutorialBloc.as  TutorialWaiting.as
scripts/__Packages/dofus/managers/: AdminManager.as  AreasManager.as  CharacteristicsManager.as  DebugManager.as  EffectsManager.as  (+8 more)
winsock-patcher/: CMakeLists.txt
winsock-patcher/install/: install_32bits.bat  install_64bits.bat
winsock-patcher/src/: Interceptor.cpp  Interceptor.h  Library.cpp  Library.h  library.h
(+498 files in other folders)
